--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,8 @@ services:
       MINIO_ROOT_USER: mosifra
       MINIO_ROOT_PASSWORD: mosifra123
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - "9000:9000"   # S3 API
+      - "9001:9001"   # Console Web
     volumes:
       - minio_data:/data
 
@@ -47,7 +47,6 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
-    command: redis-server --requirepass redis_password
 
   api:
     build: ./Mosifra-API/.
@@ -56,14 +55,22 @@ services:
       - db
       - mongo
       - minio
+      - redis
     environment:
       DATABASE_URL: postgres://sae_user:sae_password@db:5432/sae_db
-      
+      MONGO_URL: mongodb://mongo:27017/file_metadata
+      JWT_SECRET: ${JWT_SECRET}
+      PORT: ${PORT}
+      ROCKET_SECRET: ${ROCKET_SECRET}
+
+      # MinIO / S3
       S3_ENDPOINT: http://minio:9000
       S3_ACCESS_KEY: mosifra
       S3_SECRET_KEY: mosifra123
       S3_BUCKET: documents
 
+      # Redis
+      REDIS_URL: redis://:redis_password@redis:6379/0
     ports:
       - "8000:8000"
 
@@ -73,11 +80,13 @@ services:
     depends_on:
       - db
       - api
+    environment:
+      API_URL: ${API_ROOT}:${API_PORT}
     ports:
       - "8070:80"
 
 volumes:
   db_data:
-  redis_data:
   mongo_data:
   minio_data:
+  redis_data:
